src/objects/Deal_Stoplight_Deviation__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>CP_Attach_ASP__c</fullName>
        <label>CP Attach ASP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Attach_AppDate__c</fullName>
        <label>CP Attach AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_Attach_Approver__c</fullName>
        <label>CP Attach Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Attach_Dev__c</fullName>
        <label>CP Attach Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Attach_Exp__c</fullName>
        <label>CP Attach Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CP_Attach_Standard__c</fullName>
        <label>CP Attach Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Attach_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>CP Attach Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP_Attach_VMImp__c</fullName>
        <label>CP Attach VMImp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Attach_VM__c</fullName>
        <label>CP Attach VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_ASP__c</fullName>
        <label>Carrier Branding ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_AppDate__c</fullName>
        <label>Carrier Branding AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_Approver__c</fullName>
        <label>Carrier Branding Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_Dev__c</fullName>
        <label>Carrier Branding Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_Exp__c</fullName>
        <label>Carrier Branding Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_Standard__c</fullName>
        <defaultValue>&quot;Value Prod = None; Premium Prod = If approved; 360 = None&quot;</defaultValue>
        <label>Carrier Branding Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Carrier Branding Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_VMImp__c</fullName>
        <label>Carrier Branding VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_VM__c</fullName>
        <label>Carrier Branding VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_ASP__c</fullName>
        <label>Channel Fill ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_AppDate__c</fullName>
        <label>Channel Fill AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_Approver__c</fullName>
        <label>Channel Fill Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_Dev__c</fullName>
        <label>Channel Fill Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_Exp__c</fullName>
        <label>Channel Fill Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_Standard__c</fullName>
        <label>Channel Fill Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Channel Fill Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_VMImp__c</fullName>
        <label>Channel Fill VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_VM__c</fullName>
        <label>Channel Fill VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_ASP__c</fullName>
        <label>Charger / Accessories ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_AppDate__c</fullName>
        <label>Charger / Accessories AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_Approver__c</fullName>
        <label>Charger / Accessories Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_Dev__c</fullName>
        <description>Value Products Only</description>
        <inlineHelpText>Value Products Only</inlineHelpText>
        <label>Charger / Accessories Dev</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_Exp__c</fullName>
        <label>Charger / Accessories Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_Standard__c</fullName>
        <description>Value Products Only</description>
        <inlineHelpText>Value Products Only</inlineHelpText>
        <label>Charger / Accessories Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Charger Accessories Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_VMImp__c</fullName>
        <label>Charger / Accessories VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_VM__c</fullName>
        <label>Charger / Accessories VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_ASP__c</fullName>
        <label>Core Device Specifications ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_AppDate__c</fullName>
        <label>Core Device Specifications AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_App__c</fullName>
        <label>Core Device Specifications App</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_Dev__c</fullName>
        <label>Core Device Specifications Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_Exp__c</fullName>
        <label>Core Device Specifications Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Core Device Specifications Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_Std__c</fullName>
        <label>Core Device Specifications Std</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_VMImp__c</fullName>
        <label>Core Device Specifications VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_VM__c</fullName>
        <label>Core Device Specifications VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Deal Stoplight Deviations</relationshipLabel>
        <relationshipName>Deal_Stoplight_Deviations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_ASP__c</fullName>
        <label>ELX = Prepaid ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_AppDate__c</fullName>
        <label>ELX = Prepaid AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_Approver__c</fullName>
        <label>ELX = Prepaid Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_Dev__c</fullName>
        <label>ELX = Prepaid Dev</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_Exp__c</fullName>
        <label>ELX = Prepaid Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_Standard__c</fullName>
        <label>ELX = Prepaid Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>ELX Prepaid Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_VMImp__c</fullName>
        <label>ELX = Prepaid VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_VM__c</fullName>
        <label>ELX = Prepaid VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Forecasting_ASP__c</fullName>
        <label>Forecasting ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasting_AppDate__c</fullName>
        <label>Forecasting AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecasting_Approver__c</fullName>
        <label>Forecasting Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasting_Dev__c</fullName>
        <label>Forecasting Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasting_Exp__c</fullName>
        <label>Forecasting Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forecasting_Standard__c</fullName>
        <label>Forecasting Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasting_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Forecasting Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecasting_VMImp__c</fullName>
        <label>Forecasting VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasting_VM__c</fullName>
        <label>Forecasting VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IPP_ASP__c</fullName>
        <label>IPP ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPP_AppDate__c</fullName>
        <label>IPP AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPP_Approver__c</fullName>
        <label>IPP Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPP_Dev__c</fullName>
        <label>IPP Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPP_Exp__c</fullName>
        <label>IPP Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPP_Standard__c</fullName>
        <label>IPP Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPP_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>IPP Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPP_VMImp__c</fullName>
        <label>IPP VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPP_VM__c</fullName>
        <label>IPP VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Incoterms_ASP__c</fullName>
        <label>Incoterms ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_AppDate__c</fullName>
        <label>Incoterms AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incoterms_Approver__c</fullName>
        <label>Incoterms Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_Dev__c</fullName>
        <label>Incoterms Dev</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoterms_Exp__c</fullName>
        <label>Incoterms Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoterms_Standard__c</fullName>
        <label>Incoterms Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoterms_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Incoterms Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incoterms_VMImp__c</fullName>
        <label>Incoterms VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_VM__c</fullName>
        <label>Incoterms VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_ASP__c</fullName>
        <label>Late Delivery Penalty ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_AppDate__c</fullName>
        <label>Late Delivery Penalty AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_Approver__c</fullName>
        <label>Late Delivery Penalty Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_Dev__c</fullName>
        <label>Late Delivery Penalty Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_Exp__c</fullName>
        <label>Late Delivery Penalty Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_Standard__c</fullName>
        <label>Late Delivery Penalty Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Late Delivery Penalty Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_VMImp__c</fullName>
        <label>Late Delivery Penalty VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_VM__c</fullName>
        <label>Late Delivery Penalty VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MDF_ASP__c</fullName>
        <label>MDF ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_AppDate__c</fullName>
        <label>MDF AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDF_Approver__c</fullName>
        <label>MDF Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_Dev__c</fullName>
        <label>MDF Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_Exp__c</fullName>
        <label>MDF Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDF_Standard__c</fullName>
        <label>MDF Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>MDF Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MDF_VMImp__c</fullName>
        <label>MDF VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_VM__c</fullName>
        <label>MDF VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MFN_ASP__c</fullName>
        <label>MFN ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFN_AppDate__c</fullName>
        <label>MFN AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFN_Approver__c</fullName>
        <label>MFN Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFN_Dev__c</fullName>
        <label>MFN Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFN_Exp__c</fullName>
        <label>MFN Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MFN_Standard__c</fullName>
        <label>MFN Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFN_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>MFN Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MFN_VMImp__c</fullName>
        <label>MFN VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFN_VM__c</fullName>
        <label>MFN VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_ASP__c</fullName>
        <label>Not to Exceed Retail Price ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_AppDate__c</fullName>
        <label>Not to Exceed Retail Price AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_Approver__c</fullName>
        <label>Not to Exceed Retail Price Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_Dev__c</fullName>
        <label>Not to Exceed Retail Price Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_Exp__c</fullName>
        <label>Not to Exceed Retail Price Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_Standard__c</fullName>
        <label>Not to Exceed Retail Price Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Not to Exceed Retail Price Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_VMImp__c</fullName>
        <label>Not to Exceed Retail Price VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_VM__c</fullName>
        <label>Not to Exceed Retail Price VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_ASP__c</fullName>
        <label>Payment Terms ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_AppDate__c</fullName>
        <label>Payment Terms AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Approver__c</fullName>
        <label>Payment Terms Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Dev__c</fullName>
        <label>Payment Terms Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Exp__c</fullName>
        <label>Payment Terms Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Standard__c</fullName>
        <label>Payment Terms Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Payment Terms Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_VMImp__c</fullName>
        <label>Payment Terms VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_VM__c</fullName>
        <label>Payment Terms VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_ASP__c</fullName>
        <label>Product Exclusivity ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_AppDate__c</fullName>
        <label>Product Exclusivity AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_Approver__c</fullName>
        <label>Product Exclusivity Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_Dev__c</fullName>
        <label>Product Exclusivity Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_Exp__c</fullName>
        <label>Product Exclusivity Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_Standard__c</fullName>
        <label>Product Exclusivity Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Product Exclusivity Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_VMImp__c</fullName>
        <label>Product Exclusivity VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_VM__c</fullName>
        <label>Product Exclusivity VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Provision_Type__c</fullName>
        <label>Provision Type</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SW_Updates_ASP__c</fullName>
        <label>SW Updates ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Updates_AppDate__c</fullName>
        <label>SW Updates AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SW_Updates_Approver__c</fullName>
        <label>SW Updates Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Updates_Dev__c</fullName>
        <label>SW Updates Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Updates_Exp__c</fullName>
        <label>SW Updates Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SW_Updates_Standard__c</fullName>
        <label>SW Updates Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Updates_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>SW Updates Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SW_Updates_VMImp__c</fullName>
        <label>SW Updates VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Updates_VM__c</fullName>
        <label>SW Updates VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_ASP__c</fullName>
        <label>Seeding/Demo Units ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_AppDate__c</fullName>
        <label>Seeding/Demo Units AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_Approver__c</fullName>
        <label>Seeding/Demo Units Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_Dev__c</fullName>
        <label>Seeding/Demo Units Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_Exp__c</fullName>
        <label>Seeding/Demo Units Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>